Add images to directory and image of casserole to cabbage-roll

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <Title>Odin Recipes</Title>
 
     </head>
     <body>
-        
+        <h1>Odin Recipes</h1>
+        <a href="./recipes/cabbage-roll.html">Cabbage Roll</a>
     </body>
 </html>
