--- a/recipes/cabbage-roll.html
+++ b/recipes/cabbage-roll.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Cabbage Roll</h1>
+        <img src="../images/Cabbage-Casserole.jpg" alt="A tasty cabbage casserole">
         
     </body> 
 </html>
