Add content to cabbage-roll.html

--- a/recipes/cabbage-roll.html
+++ b/recipes/cabbage-roll.html
@@ -7,7 +7,36 @@
     <body>
         <h1>Cabbage Roll</h1>
         <img src="../images/Cabbage-Casserole.jpg" alt="A tasty cabbage casserole">
+        <h2>Description</h2>
+        <p>This Cabbage Roll recipe has all of the best parts of this classic dish! Cabbage, mince, onions, a perfect winter recipe!</p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>Cabbage</li>
+            <li>Ground Beef Mince</li>
+            <li>Onions</li>
+            <li>Garlic</li>
+            <li>Paprika</li>
+            <li>Onion Powder</li>
+            <li>Cayenne Pepper</li>
+            <li>Brown Sugar</li>
+            <li>Tomato Sauce</li>
+            <li>Beef Broth</li>
+            <li>Rice</li>
+        </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li>Begin browning the ground beef.</li>
+            <li>Halfway through browning, add chopped unions and cook until beef is fully browned.</li>
+            <li>Turn the heat to low, throw in garlic and cook for one minute.</li>
+            <li>Drain excess fat.</li>
+            <li>Add the remaining ingredients and bring to a low boil, then reduce to a simmer.</li>
+            <li>Add a lid and simmer until the rice is soft.</li>
+            <li>In a seperate skillet, cook half of the cabbage in a little olive oil until soft.</li>
+            <li>Add the cooked cabbage to a casserole dish that has been prepared with a little olive oil.</li>
+            <li>Add the beef mixture on top of the cooked cabbage, spreading around.</li>
+            <li>Cook the remaining half of the cabbage in the same way, and spread on the top.</li>
+            <li>Add grated cheese to the top, cover with foil and bake for 20 minutes.</li> 
+        </ol>
         
     </body> 
-</html>
 </html>
