--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/cabbage-roll.html">Cabbage Roll</a>
+        <ul>
+            <li><a href="./recipes/cabbage-roll.html">Cabbage Roll</a></li>
+            <li><a href="./recipes/pulled-pork.html">Pulled Pork</a></li>
+            <li><a href="./recipes/chicken-and-black-bean-enchiladas.html"> Chicken and Black Bean Enchiladas</a></li>
+        </ul>
     </body>
 </html>
