link pages to style css style sheet

--- a/recipes/cabbage-roll.html
+++ b/recipes/cabbage-roll.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <Title>Cabbage Roll Recipe</Title>
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
         <h1>Cabbage Roll</h1>
