--- a/recipes/pulled-pork.html
+++ b/recipes/pulled-pork.html
@@ -3,6 +3,7 @@
     <head>
     <meta charset="UTF-8">
     <title>Pulled Pork Recipe</title>
+    <link rel="stylesheet" href="./style.css">
     </head>
     <body>
         <h1>Pulled Pork Recipe</h1>
