Correct link between recipe subfolders and css style sheet

--- a/recipes/pulled-pork.html
+++ b/recipes/pulled-pork.html
@@ -3,11 +3,11 @@
     <head>
     <meta charset="UTF-8">
     <title>Pulled Pork Recipe</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../style.css">
     </head>
     <body>
         <h1>Pulled Pork Recipe</h1>
-        <img src="../images/pulled-pork.jpg" alt="A picture of tasty pulled pork">
+        <img class="foodpic" src="../images/pulled-pork.jpg" alt="A picture of tasty pulled pork">
         <h2>Description</h2>
         <p>This delicious pulled pork recipe has been a regular in my house and of anyone who has tasted it. It can be mixed with BBQ sauce or enjoyed with it's own juices. </p>
         <h3>Ingredients</h3>
