--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <Title>Odin Recipes</Title>
+        <link rel="stylesheet" href="./style.css">
 
     </head>
     <body>
@@ -10,7 +11,7 @@
         <ul>
             <li><a href="./recipes/cabbage-roll.html">Cabbage Roll</a></li>
             <li><a href="./recipes/pulled-pork.html">Pulled Pork</a></li>
-            <li><a href="./recipes/chicken-and-black-bean-enchiladas.html"> Chicken and Black Bean Enchiladas</a></li>
+            <li><a href="./recipes/chicken-and-black-bean-enchiladas.html">Chicken and Black Bean Enchiladas</a></li>
         </ul>
     </body>
 </html>
