--- a/recipes/cabbage-roll.html
+++ b/recipes/cabbage-roll.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <Title>Cabbage Roll Recipe</Title>
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
         <h1>Cabbage Roll</h1>
-        <img src="../images/Cabbage-Casserole.jpg" alt="A tasty cabbage casserole">
+        <img class="foodpic" src="../images/Cabbage-Casserole.jpg" alt="A tasty cabbage casserole">
         <h2>Description</h2>
         <p>This Cabbage Roll recipe has all of the best parts of this classic dish! Cabbage, mince, onions, a perfect winter recipe!</p>
         <h3>Ingredients</h3>
