--- a/recipes/chicken-and-black-bean-enchiladas.html
+++ b/recipes/chicken-and-black-bean-enchiladas.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <Title>Chicken and Black Bean Enchiladas</Title>
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
         <h1>Chicken and Black Bean Enchiladas</h1>
-        <img src="../images/enchilada.jpg" alt="Tasty enchladas in a dish">
+        <img class="foodpic" src="../images/enchilada.jpg" alt="Tasty enchladas in a dish">
         <h2>Description</h2>
         <p>These chicken enchiladas are tasty, cheesy, and full of onions and spices. Filling and a real treat.</p>
         <h3>Ingredients</h3>
