--- a/recipes/chicken-and-black-bean-enchiladas.html
+++ b/recipes/chicken-and-black-bean-enchiladas.html
@@ -34,7 +34,7 @@
             <li>Serve with a salad or some guacamole and enjoy! <em>I find that waiting 10 minutes makes dishing our whole intact enchiladas easier.</em></li>
 
         </ol>
-
+        <a href="../index.html">Return to Recipe List</a>
 
     </body>
 </html>
