--- a/recipes/pulled-pork.html
+++ b/recipes/pulled-pork.html
@@ -32,5 +32,6 @@
             <li>Add the pork shoulder to the slow cooker.</li>
             <li>Cook for 6-8 hours on high, or 8-10 hours on medium.</li>
         </ol>
+        <a href="../index.html">Return to Recipe List</a>
     </body>
 </html>
